[package]
name = "sget-github"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = "0.14.16"
thiserror = "1.0"
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
random-string = "1.0.0"